harness/fixtures/enforce-arrow-function/good/nested-arrow.ts
const outer = () => {
  const inner = () => 1;
  return inner;
};
