harness/fixtures/enforce-arrow-function/bad/default-export.ts
export default function qux() {
  return 1;
}
